# Sistema-de-Inventario-Diego-y-Francisco

./: .gitignore  README.md  alembic.ini
backend/: alembic.ini  database.sqlite  pyproject.toml  requirements.txt  sistema.sqlite
backend/app/: auth.py  database.py  db.py  main.py  models.py  routes.py  schemas.py  utils.py
backend/app/routes/: compras.py  productos.py  reportes.py  users.py  ventas.py
backend/migrations/: env.py
backend/migrations/versions/: 20763577211a_initial_migration.py  72e8a5dc1e98_agregar_campo_total_en_ventas.py  a119f6a1c91a_agregar_campo_total.py  d1d33a92dc13_añadir_nuevos_campos_totales_compras_y_.py  e7cf79e792a1_añadir_estado_hab_o_deshab_y_ruta_.py
frontend/: dashboard.html  index.html
frontend/css/: styles.css
frontend/js/: api.js  dashboard.js  main.js
