[tool.poetry]
name = "hw3-bdd2"
version = "0.1.0"
description = "Sistema de gestión de inventarios, compras y ventas para una tienda"
authors = ["Tu Nombre <tuemail@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^0.8.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.8.0"
pydantic = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
